@@ -299,11 +299,10 @@ class Tester:
         '''
         import os
         import re
-        import sys
         import buildingspy.development.data as data
 
         scrPat = os.path.join(self.__libHome, 'Resources', 'Scripts', 'Dymola')
-        for root, dirs, files in os.walk(scrPat):
+        for root, _, files in os.walk(scrPat):
             pos=root.find('.svn')
             # skip .svn folders
             if pos == -1:
@@ -341,7 +340,7 @@ class Tester:
                             if 'y={' in lin:
                                 try:
                                     var=re.search('{.*?}', lin).group()
-                                except AttributeError as e:
+                                except AttributeError:
                                     s =  "%s, line %s, could not be parsed.\n" % (mosFil, iLin)
                                     s +=  "The problem occurred at the line below:\n"
                                     s +=  "%s\n" % lin
@@ -426,7 +425,6 @@ class Tester:
         of results that need to be printed together.
         '''    
         import os
-        import sys
         from buildingspy.io.outputfile import Reader
         from buildingspy.io.postprocess import Plotter
 
@@ -444,8 +442,8 @@ class Tester:
         try:
             r=Reader(fulFilNam, "dymola") 
         except IOError as e:
-            errors.append("Failed to read %s generated by %s.\n" % 
-                             (fulFilNam, data.getScriptFile()))
+            errors.append("Failed to read %s generated by %s.\n%s\n" % 
+                             (fulFilNam, data.getScriptFile()), e.strerror)
             return ret
 
         for pai in data.getResultVariables(): # pairs of variables that are plotted together
@@ -571,7 +569,7 @@ class Tester:
         '''
         from datetime import date
 
-        def format(value):
+        def formatFloat(value):
             return "%.20f" % value
 
         f=open(refFilNam, 'w')
@@ -586,7 +584,7 @@ class Tester:
                     f.write(k + '=')
                     # Use many digits, otherwise truncation errors occur that can be higher
                     # than the required accuracy.
-                    formatted = [format(e) for e in v]
+                    formatted = [formatFloat(e) for e in v]
                     f.write(str(formatted).replace("'", ""))
                     f.write('\n')
         f.close()
@@ -802,7 +800,6 @@ class Tester:
     # ask the user whether it should be generated.
     def __checkReferencePoints(self, ans):
         import os
-        import sys
 
         #Check if the directory "self.__libHome\\Resources\\ReferenceResults\\Dymola" exists, if not create it.
         refDir=os.path.join(self.__libHome, 'Resources', 'ReferenceResults', 'Dymola')   
@@ -827,8 +824,8 @@ class Tester:
                         self.__reporter.writeWarning(entry)
                     for entry in errors:
                         self.__reporter.writeError(entry)
-                except UnicodeDecodeError, e:
-                    em = str(e) + "\n"
+                except UnicodeDecodeError as e:
+                    em = "UnicodeDecodeError({0}): {1}".format(e.errno, e.strerror)
                     em += "Output file of " + data.getScriptFile() + " is excluded from unit tests.\n"
                     em += "The model appears to contain a non-asci character\n"
                     em += "in the comment of a variable, parameter or constant.\n"
@@ -845,7 +842,7 @@ class Tester:
                     # If the reference file exists, and if the reference file contains results, compare the results.
                     if os.path.exists(oldRefFulFilNam):
                         # compare the new reference data with the old one
-                        [updateReferenceData, foundError, ans]=self.__compareResults(
+                        [updateReferenceData, _, ans]=self.__compareResults(
                             data.getResultFile(), oldRefFulFilNam, yS, refFilNam, ans)
                     else:
                         # Reference file does not exist
@@ -926,14 +923,16 @@ class Tester:
             return 0
 
 
-    # --------------------------
-    def printNumberOfClasses(self, dir):
+    def printNumberOfClasses(self):
+        ''' Print the number of models, blocks and functions to the 
+            standard output stream
+        '''
         import os
 
         iMod=0
         iBlo=0
         iFun=0
-        for root, dirs, files in os.walk(self.__libHome):
+        for root, _, files in os.walk(self.__libHome):
             pos=root.find('.svn')
             # skip .svn folders
             if pos == -1:
@@ -942,7 +941,7 @@ class Tester:
                     pos=filNam.find('.mo')
                     posExa=root.find('Examples')
                     if pos > -1 and posExa == -1:
-                         # find classes that are not partial
+                        # find classes that are not partial
                         filFulNam=os.path.join(root, filNam)
                         iMod = self.__checkKey("model", filFulNam, iMod)
                         iBlo = self.__checkKey("block", filFulNam, iBlo)
@@ -1128,7 +1127,6 @@ class Tester:
         import buildingspy.development.validator as v
 
         import multiprocessing
-        import sys
         import os
         import shutil
         import time
@@ -1141,7 +1139,7 @@ class Tester:
 
         retVal = 0
         # Start timer
-        startTime=time.time()
+        startTime = time.time()
         # Process command line arguments
 
         # Check if executable is on the path
@@ -1150,7 +1148,6 @@ class Tester:
             return 3
 
         # Check current working directory
-        curDir=os.path.split(os.path.abspath("."))[1]
         if not self.isValidLibrary():
             print "*** This script must be run from the root directory of the library."
             print "*** The current directory is ", os.getcwd()
@@ -1159,7 +1156,7 @@ class Tester:
 
         print "Using ", self.__nPro, " of ", multiprocessing.cpu_count(), " processors to run unit tests."
         # Count number of classes
-        self.printNumberOfClasses(".")    
+        self.printNumberOfClasses()    
 
         # Validate html
         val = v.Validator()
@@ -1183,13 +1180,13 @@ class Tester:
 
 
         # Concatenate output files into one file
-        logFil=open('dymola.log', 'w')
+        logFil = open('dymola.log', 'w')
         for d in self.__temDir:
             temLogFilNam = os.path.join(d, self.__libraryName, 'dymola.log')
             if os.path.exists(temLogFilNam):
-                file=open(temLogFilNam,'r')
-                data=file.read()
-                file.close()
+                fil=open(temLogFilNam,'r')
+                data=fil.read()
+                fil.close()
                 logFil.write(data)
             else:
                 self.__reporter.writeError("Log file '" + temLogFilNam + "' does not exist.\n")
@@ -1223,7 +1220,7 @@ class Tester:
                 print "            ", fil
 
         # Print time
-        elapsedTime=time.time()-startTime;
+        elapsedTime = time.time()-startTime;
         print "Execution time = %.3f s" % elapsedTime
 
         return retVal
