@@ -13,7 +13,11 @@ Version 1.3.0, xxxx, 2013 -- Release 1.3
 - In simulate.Simulator, corrected use of variable that was not defined. 
   Avoided use of variable name exit which is a reserved keyword. 
   Avoided the use of temporary variables that are not needed.
-- In development.unittest, removed non-needed import statement.
+- In development.unittest, 
+  - removed non-needed import statement,
+  - removed argument dir from method printNumberOfClasses(self)
+    as this argument is not used.
+
 
 Version 1.2.0, May 15, 2013 -- Release 1.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
